# file-server-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
migrations/: 001_create_files_table.sql
src/: database.rs  main.rs
src/config/: mod.rs
src/handlers/: files.rs  frontend.rs  mod.rs  upload.rs
src/middleware/: auth.rs  mod.rs
src/models/: file.rs  mod.rs
src/storage/: local.rs  mod.rs  s3.rs
static/: style.css  upload.html
